--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
+PGUSER=postgres
+PGHOST=localhost
+PGDATABASE=long_term_memory_app
+PGPASSWORD=119123
+PGPORT=5432
+PINECONE_API_KEY="34f2630b-2f0d-477f-a9ba-61503e5fccf0"
 OPENAI_API_KEY="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"
+HTTP_PROXY = "http://localhost:7890"
+HTTPS_PROXY = "http://localhost:7890"
