--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   "dependencies": {
     "@pinecone-database/pinecone": "^2.0.1",
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "global-agent": "^3.0.0",
+    "http-proxy-middleware": "^2.0.6",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.8",
-    "openai": "^4.24.7",
+    "openai": "^4.26.0",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
@@ -28,7 +33,8 @@
     "rehype-stringify": "^10.0.0",
     "remark-gfm": "^4.0.0",
     "remark-mermaid-plugin": "^1.0.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
