--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PGHOST=localhost
 PGDATABASE=long_term_memory_app
 PGPASSWORD=119123
 PGPORT=5432
-PINECONE_API_KEY="34f2630b-2f0d-477f-a9ba-61503e5fccf0"
+PINECONEKEY="34f2630b-2f0d-477f-a9ba-61503e5fccf0"
 OPENAI_API_KEY="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"
-HTTP_PROXY = "http://localhost:7890"
-HTTPS_PROXY = "http://localhost:7890"
+JWT_SECRET_KEY="Hy3+iKJBz4QT/lhEn5kAMBeQho7j9Ao0dzFOB7eYo08="
+ZHIPUAI_API_KEY=d64f4d32b53be5417e93c91022f3da7f.pIeaVDPK08WKCdm9
