--- a/package.json
+++ b/package.json
@@ -13,28 +13,34 @@
   "dependencies": {
     "@pinecone-database/pinecone": "^2.0.1",
     "@reduxjs/toolkit": "^2.0.1",
+    "@zilliz/milvus2-sdk-node": "^2.3.5",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
+    "event-stream": "^4.0.1",
     "express": "^4.18.2",
     "global-agent": "^3.0.0",
     "http-proxy-middleware": "^2.0.6",
+    "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.8",
     "openai": "^4.26.0",
     "pg": "^8.11.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-modal-image": "^2.6.0",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.0",
     "remark-gfm": "^4.0.0",
     "remark-mermaid-plugin": "^1.0.2",
     "uuid": "^9.0.1",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "zhipuai-sdk-nodejs-v4": "^0.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
